--- a/app/app.config.example
+++ b/app/app.config.example
@@ -1,10 +1,10 @@
 app.constant("FIREBASE_CONFIG", {
-    apiKey: "AIzaSyAgUOagFXOeau7UUqdgGZuvPjqJbCZPf3U",
-    authDomain: "guitar-pricer.firebaseapp.com",
-    databaseURL: "https://guitar-pricer.firebaseio.com",
-    projectId: "guitar-pricer",
-    storageBucket: "guitar-pricer.appspot.com",
-    messagingSenderId: "918852501510"
+    apiKey: "",
+    authDomain: "",
+    databaseURL: "",
+    projectId: "",
+    storageBucket: "",
+    messagingSenderId: ""
 })
 
 
@@ -12,7 +12,7 @@ angular.module("GuitarPricerApp").run(function (FIREBASE_CONFIG) {
     firebase.initializeApp(FIREBASE_CONFIG)
 })
 
-angular.module("GuitarPricerApp").constant("ebayKey", "GarrettW-KellyBlu-PRD-e132041a0-8df2cdd9")
+angular.module("GuitarPricerApp").constant("ebayKey", "")
 
 const isAuth = AuthFactory => new Promise ((resolve, reject) => {
     if (AuthFactory.isAuthenticated()){
